--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "axios": "^0.24.0",
+    "clarifai": "^2.9.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-parallax-tilt": "^1.7.75",
+    "react-particles": "^2.6.0",
+    "react-scripts": "^4.0.3",
+    "tachyons": "^4.12.0",
+    "tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
