reduced repeated code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Facial Recognition",
-  "name": "Facial Recognition App",
+  "short_name": "Smart Brain",
+  "name": "Smart Brain App",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
